--- a/9_backmatter/references.bib
+++ b/9_backmatter/references.bib
@@ -75,11 +75,6 @@
 	publisher = "Manning Publications"
 }
 
-@book{camel,
-	title = " Apache Camel official website",
-	publisher = "http://camel.apache.org"
-}
-
 @book{bloch2008,
 	author = "Joshua Bloch",
 	title = "Effective Java (2nd Edition)",
@@ -92,6 +87,27 @@
 	title ="Design Patterns: Elements of Reusable Object-Oriented Software",
 	year = 1995,
 	publisher = "Addison-Wesley"
+}
+
+
+@book{hall2011,
+	author = "Richard Hall, Karl Pauls, Stuart McCulloch, David Savage ",
+	title ="OSGi in Action: Creating Modular Applications in Java",
+	year = 2011,
+	publisher = "Manning Publications"
+}
+
+@book{och2003,
+	authot = "Franz Josef Och",
+	title = "Statistical Phrase-Based Translation",
+	year = 2003,
+	publisher = "University of Southern California"
+}
+
+@misc{camel2012,
+	title = "Apache Camel official website",
+	howpublished = "\url{http://camel.apache.org}",
+	year = 2012
 }
 
 @misc{jaxb2008, 
@@ -113,18 +129,23 @@
 	year = 2003
 }
 
-@book{hall2011,
-	author = "Richard Hall, Karl Pauls, Stuart McCulloch, David Savage ",
-	title ="OSGi in Action: Creating Modular Applications in Java",
-	year = 2011,
-	publisher = "Manning Publications"
+
+@misc{fusehomepage2012, 
+	title = "Fuse ESB homepage",
+	howpublished = "\url{http://fusesource.com/docs/esb/}",
+	year = 2012
 }
 
-@book{och2003,
-	authot = "Franz Josef Och",
-	title = "Statistical Phrase-Based Translation",
-	year = 2003,
-	publisher = "University of Southern California"
+@misc{ivonasite,
+	title = "Ivona TTS homepage",
+	howpublished = "\url{http://developer.ivona.com/overview}",
+	year = 2012
+}
+
+@misc{freettssite,
+	title = "Free TTS homepage",
+	howpublished = "\url{http://freetts.sourceforge.net/docs/index.php}",
+	year = 2012
 }
 
 @article{name06,
