--- a/2/problem_analysis.tex
+++ b/2/problem_analysis.tex
@@ -16,7 +16,7 @@
 
 %: ----------------------- contents from here ------------------------
 
-Rozdział ten podzielony jest na trzy części. Celem pierwszej jest zdefiniowanie pojęcia przetwarzania mowy, celem drugiej jest analiza różnych, możliwych sposobów integracji natomiast celem częsci trzeciej jest opisanie jak specyficzna dziedzina, jaką jest przetwarzanie mowy, wpływa na wybór sposobu integracji.
+Rozdział ten podzielony jest na cztery części. Celem pierwszej jest zdefiniowanie pojęcia przetwarzania mowy, celem drugiej jest krótkie przedstawienie paradygmatu SOA, celem części trzeciej jest analiza różnych, możliwych sposobów integracji natomiast celem ostatniej częsci jest opisanie jak specyficzna dziedzina, jaką jest przetwarzanie mowy, wpływa na wybór sposobu integracji.
 
 \section{Przetwarzanie mowy}
 Mowa jest naturalnym, wytworzonym przez człowieka w procesie ewolucji, sposobem komunikacji. Jej niewątpliwe zalety to:
@@ -166,6 +166,25 @@ Rozpoznawanie języka to proces którego celem jest stwierdzenie w jakim języku
 \end{itemize} 
 Jak widać przetwarzanie mowy samo w sobie jest bardzo obszernym i skomplikowanym tematem, w skład którego wchodzi wiele różnych procesów które można zintegrować tworząc efektywne i bardzo funkcjonalne systemy.
 
+\section{Paradygmat SOA}
+SOA czyli Service Oriented Architecture(Architektura zorientowana na usługi) to zgodnie z definicją zaproponowaną przez W3C zbiór komponentów dostępnych w siecii posiadających dobrze opisane interfejsy. Opis ten pozwala na rozróżnianie komponentów i ich wyszukiwanie, a następnie wywoływanie. Najbardziej popularną obecnie implementacją tego paradygmatu jest ta opierająca się o technologię web service.  W paradygmacie SOA możemy wyróżnić dwa różne podejścia tworzenia serwisów:
+ \begin{itemize}
+	\item orkiestracja
+	\item choreografia
+\end{itemize}  
+Orkiestracja charakteryzuje się tym, iż istnieje jeden serwis orkiestrator, dyrygent lub kordynator który zarządza innymi serwisami w celu udostępniania jednej funkcjonalności. Prowadzi to do luźniejszego połączenia serwisów, sprawia też, że nie są one świadome bycia częścią większego procesu. Orkiestracja jest scentralizowaną formą współpracy z dobrze zdefiniowanymi operacjami i kolejnością wywoływania serwisów. Powstał nawet specjalny język BPEL ułatwiający taką integrację serwisów.   
+\begin{figure}[!h]
+	\centering
+	\includegraphics[scale=0.75]{orkiestracja.png} 
+	\caption{Orkiestracja}
+\end{figure}
+\newpage
+Choreografia to sposób współpracy serwisów, charakteryzujący się tym,  iż każdy serwis musi być świadomy bycia częścią czegoś większego, od niego zależy kiedy i z kim się skomunikuje. Nie ma tutaj centralnego zarządzania, kordynatora czy też serwisu nadrzędnego. Stworzenie alternatywnego scenariusza w przypadku awarii jest ciężkie albo wręcz niemożliwe. 
+\begin{figure}[!h]
+	\centering
+	\includegraphics[scale=0.75]{choreogragia.png} 
+	\caption{Choreografia}
+\end{figure}
 
 \section{Sposoby integracji systemów komputerowych}
 Dzięki postępowi technologicznemu przepustowość łączy internetowych wciąż wzrasta powodując, bardzo szybki rozwój systemów komputerowych i serwisów przez nie oferowanych. Powstają nowe rodzaje usług, które kiedyś nie mogły by zostać zrealizowane, przy tworzeniu zaś niektórych aplikacji, to co kiedyś było problemem i na czym skupiali swój wysiłek twórcy oprogramowania, dzisiaj schodzi na drugi plan. Z drugiej jednak strony zwiększają sie wymagania użytkowników co do jakości, są wprowadzane coraz to nowe formaty, które wymagają ogromnych przepustowości, przez co mogą zapychać łącza i tworzyć opóźnienia. Jest to szczególnie istotne w systemach czasu rzeczywistego, w których istnienie opóźnień jest nieakceptowalne. Czasami jednak aplikacje i ich użytkownicy nie mają takich scisłych wymagań co do wielkości opóźnienia. W ich przypadku opóźnienie nawet rzędu kilkudziesięciu sekund nie stanowi problemu i jest akceptowalne przez użytkowników. W takim wypadku nie trzeba sie skupiać na szukaniu idealnego rozwiązania dla danego problemu, lecz można skupić się na stworzeniu architektóry która ułatwi i przyspieszy budowanie systemów spełniających dane wymagania.
@@ -231,10 +250,9 @@ Co równie ważne, wszystkie implementacje ESB oferują również bardzo wiele r
 	\item serwisy REST'owe
 \end{itemize}
 
-
 \section{Inegracja systemów przetwarzania mowy}
 
-Podrozdział ten ma na celu przedstawić jakie wymagania można postawić przed przykładową aplikacją integrującą systemy przetwarzania mowy i jak wpłyną one na sposób integracji. Aby zdefiniować wymagania można rozważyć przykładową aplikację kliencką która mogłaby być zbudowana w oparciu o taki system. Podstawowe funkcje które taka aplikacja realizuje mogą być następujące:
+Podrozdział ten ma na celu przedstawić  jakie wymagania można postawić przed przykładową aplikacją integrującą systemy przetwarzania mowy i jak wpłyną one na sposób integracji. Aby zdefiniować wymagania można rozważyć przykładową aplikację kliencką która mogłaby być zbudowana w oparciu o taki system. Podstawowe funkcje które taka aplikacja realizuje mogą być następujące:
 \begin{itemize}
 	\item zamiana pliku graficznego będącego zdjęciem tekstu na plik tekstowy (OCR)
 	\item synteza tekstu (TTS)
@@ -263,6 +281,7 @@ Zastosowanie takiego formatu ma dużo zalet, z czego najważniejsze to:
 	\item czytelność dla człowieka
 	\item łatwa rozbudowa
 \end{itemize}
+\newpage
 Przykładowy plik konfiguracyjny potrzebny do realizacji opisanego wyżej scenariusza wyglądałby nastepująco:
 
 \setlength\fboxsep{20pt}
