--- a/9_backmatter/references.bib
+++ b/9_backmatter/references.bib
@@ -40,8 +40,8 @@
 	publisher = "Department of Computer Science and Engineering of BRAC University"
 }
 
-@book{adams1997,
-	author= "Gary Adams, Philip Resnik",
+@book{adamsresnik1997,
+	author= "Philip Resnik, Gary Adams",
 	title = "A Language Identification Application Built on the Java Client/Server Platform",
 	year = 1997,
 	publisher = "Department of Linguistics and UMIACS University of Maryland"
